Fix cursor jumps and hide unnecessary error lines on validation

--- a/src/uikit/components/input/input.scss
+++ b/src/uikit/components/input/input.scss
@@ -7,5 +7,8 @@
     }
 
     .validation-error {
+        &.hidden {
+            display: none;
+        }
     }
 }
